# MCP-TEST-PILOT

multi-MCP-tool/: README.md
multi-MCP-tool/jira-mcp/: pyproject.toml  server.py
multi-MCP-tool/mcp-client/: main.py  mcp_client.py  pyproject.toml
multi-MCP-tool/streamlit-frontend/: frontend-main.py  pyproject.toml
