[project]
name = "jira-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "bs4>=0.0.2",
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.10.6",
    "ipykernel>=6.30.0",
    "jira>=3.8.0",
    "logging>=0.4.9.6",
    "markdown>=3.8.2",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pdfminer>=20191125",
    "python-docx>=1.2.0",
    "streamlit>=1.47.0",
]
